--- a/src/components/gridbox/Gridbox.css
+++ b/src/components/gridbox/Gridbox.css
@@ -12,9 +12,9 @@
     width:var(--cell-width);
     border:3px solid black;
     background-color: lightcyan;
-    font-size: 7px;
+    font-size: 9px;
     display: flex;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
     user-select: none;
     overflow: hidden;
