--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ code {
   --primary-clr: #fc9898;
   --secondary-clr: #fdddca;
   --light-line: #e4e2ed;
-  --cell-width: 22px;
+  --cell-width: 40px;
   --light-text: #686673;
   --light-dot: #adaac0;
   --wall-clr: #0c3547;
